# envertech_local_python

./: LICENSE  README.md  pyproject.toml
.github/workflows/: pylint.yml  python-package.yml
envertech_local/: __init__.py  api.py  commands.py  discovery.py  protocol.py  utils.py
examples/: README.md  discover_and_connect.py  streamdata.py
